2004-04-27  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.eucJP/timidity.1: Update

2004-04-26  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.eucJP/timidity.1: Update
	* timidity/timidity.c:
	  Rename --flac-compression-level -> --flac-complevel

2004-04-25  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.eucJP/timidity.1,
	  doc/C/timidity.cfg.5, doc/ja_JP.eucJP/timidity.cfg.5: Update
	* interface/ncurs_c.c: Fix a little

2004-04-25  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* configure.in: Bug fix and autoreconf

2004-04-23  Kentaro Sato <kentaro@ranvis.com>

	* timidity/timidity.c: Fixed a bug dealing with an empty var.

2004-04-23  Saito <saito@intaa.net>

	* timidity/reverb.c, timidity/optcode.h: Fix noises.

2004-04-23  Iwata <b6330015@ipc.kit.jp>

	* timidity/speex_a.c: Add
	* configure.in, timidity/output.c, timidity/timidity.c,
	  timidity/Makefile.am: Add OggSpeex support

2004-04-21  Saito <saito@intaa.net>

	* timidity/flac_a.c: Fix around filename at Win32GUI interface.

2004-04-20  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix a little

2004-04-19  Saito <saito@intaa.net>

	* timidity/flac_a.c: Fix for VC++ environments.

2004-04-18  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* configure.in: fix for libAO detection
	* autoconf/libFLAC.m4, autoconf/libOggFLAC.m4: Add.
	* configure.in: Change to use above
	* autoconf/Makefile.am: ditto

2004-04-18  Iwata <b6330015@ipc.kit.jp>

	* timidity/flac_a.c: Add
	* configure.in, timidity/output.c, timidity/timidity.c,
	  timidity/Makefile.am: Add libFLAC support

2004-04-14  Kentaro Sato <kentaro@ranvis.com>

	* libarc/arc.c, timidity/timidity.c:
	  Removed trailing directory separator from $basedir.

2004-04-13  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* autoconf/ao.m4: Add.
	* configure.in: Change to use ao.m4
	* autoconf/Makefile.am (EXTRA_DIST): ditto.

2004-04-13  Iwata <b6330015@ipc.kit.jp>

	* timidity/ao_a.c: Add.